--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horsey Town</title>
+    <title>TerraTowns</title>
 </head>
 <body>
-    <h1>Do horses make you smile? Us too!</h1>
+    <h1>Hello Terraformers!</h1>
 </body>
 </html>
 
