#36 uploading assets using a for each

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Hello Terraformers!</h1>
+    <img src="./assets/obxpic1.jpg" alt="the Outer Banks NC beach in the morning">
+    <img src="./assets/obxatnight.jpg" alt="A lighthouse on the Outer Banks shining with stars in the background">
 </body>
 </html>
 
